// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationItem should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NotificationsItem
    active={true}
    available={false}
    id="123456"
    name="streak saver"
    onSwitchPress={[MockFunction]}
    onTimePress={[MockFunction]}
    time="09:00"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "flex": 1,
              "paddingLeft": 20,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 32,
              }
            }
          >
            streak saver
          </YuText>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 28,
                }
              }
            >
              09:00
            </YuText>
          </TouchableOpacity>
        </View>,
        <Switch
          onValueChange={[MockFunction]}
          thumbColor={null}
          trackColor={
            Object {
              "false": "rgb(230,230,230)",
              "true": "rgb(232, 49, 129)",
            }
          }
          value={true}
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingVertical": 28,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 32,
                }
              }
            >
              streak saver
            </YuText>,
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
            >
              <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 28,
                  }
                }
              >
                09:00
              </YuText>
            </TouchableOpacity>,
          ],
          "style": Object {
            "flex": 1,
            "paddingLeft": 20,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "streak saver",
              "style": Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 32,
              },
            },
            "ref": null,
            "rendered": "streak saver",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 28,
                  }
                }
              >
                09:00
              </YuText>,
              "onPress": [MockFunction],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "09:00",
                "style": Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 28,
                },
              },
              "ref": null,
              "rendered": "09:00",
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "onValueChange": [MockFunction],
          "thumbColor": null,
          "trackColor": Object {
            "false": "rgb(230,230,230)",
            "true": "rgb(232, 49, 129)",
          },
          "value": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "flex": 1,
                "paddingLeft": 20,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 32,
                }
              }
            >
              streak saver
            </YuText>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
            >
              <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 28,
                  }
                }
              >
                09:00
              </YuText>
            </TouchableOpacity>
          </View>,
          <Switch
            onValueChange={[MockFunction]}
            thumbColor={null}
            trackColor={
              Object {
                "false": "rgb(230,230,230)",
                "true": "rgb(232, 49, 129)",
              }
            }
            value={true}
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingVertical": 28,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 32,
                  }
                }
              >
                streak saver
              </YuText>,
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
              >
                <YuText
                  style={
                    Object {
                      "fontFamily": "Bariol-Regular",
                      "fontSize": 28,
                    }
                  }
                >
                  09:00
                </YuText>
              </TouchableOpacity>,
            ],
            "style": Object {
              "flex": 1,
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "streak saver",
                "style": Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 32,
                },
              },
              "ref": null,
              "rendered": "streak saver",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <YuText
                  style={
                    Object {
                      "fontFamily": "Bariol-Regular",
                      "fontSize": 28,
                    }
                  }
                >
                  09:00
                </YuText>,
                "onPress": [MockFunction],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "09:00",
                  "style": Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 28,
                  },
                },
                "ref": null,
                "rendered": "09:00",
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "onValueChange": [MockFunction],
            "thumbColor": null,
            "trackColor": Object {
              "false": "rgb(230,230,230)",
              "true": "rgb(232, 49, 129)",
            },
            "value": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`NotificationItem should render without time 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <NotificationsItem
    active={true}
    available={false}
    id="123456"
    name="streak saver"
    onSwitchPress={[MockFunction]}
    onTimePress={[MockFunction]}
    time=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <View
          style={
            Object {
              "flex": 1,
              "paddingLeft": 20,
            }
          }
        >
          <YuText
            style={
              Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 32,
              }
            }
          >
            streak saver
          </YuText>
        </View>,
        <Switch
          onValueChange={[MockFunction]}
          thumbColor={null}
          trackColor={
            Object {
              "false": "rgb(230,230,230)",
              "true": "rgb(232, 49, 129)",
            }
          }
          value={true}
        />,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingVertical": 28,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 32,
                }
              }
            >
              streak saver
            </YuText>,
            null,
          ],
          "style": Object {
            "flex": 1,
            "paddingLeft": 20,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "streak saver",
              "style": Object {
                "fontFamily": "Bariol-Regular",
                "fontSize": 32,
              },
            },
            "ref": null,
            "rendered": "streak saver",
            "type": [Function],
          },
          null,
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "onValueChange": [MockFunction],
          "thumbColor": null,
          "trackColor": Object {
            "false": "rgb(230,230,230)",
            "true": "rgb(232, 49, 129)",
          },
          "value": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "flex": 1,
                "paddingLeft": 20,
              }
            }
          >
            <YuText
              style={
                Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 32,
                }
              }
            >
              streak saver
            </YuText>
          </View>,
          <Switch
            onValueChange={[MockFunction]}
            thumbColor={null}
            trackColor={
              Object {
                "false": "rgb(230,230,230)",
                "true": "rgb(232, 49, 129)",
              }
            }
            value={true}
          />,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flexDirection": "row",
          "justifyContent": "center",
          "paddingVertical": 28,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <YuText
                style={
                  Object {
                    "fontFamily": "Bariol-Regular",
                    "fontSize": 32,
                  }
                }
              >
                streak saver
              </YuText>,
              null,
            ],
            "style": Object {
              "flex": 1,
              "paddingLeft": 20,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "streak saver",
                "style": Object {
                  "fontFamily": "Bariol-Regular",
                  "fontSize": 32,
                },
              },
              "ref": null,
              "rendered": "streak saver",
              "type": [Function],
            },
            null,
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "onValueChange": [MockFunction],
            "thumbColor": null,
            "trackColor": Object {
              "false": "rgb(230,230,230)",
              "true": "rgb(232, 49, 129)",
            },
            "value": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
